--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-colorful": "^5.6.1",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-rnd": "^10.5.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
