--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^19.1.0",
     "react-rnd": "^10.5.2",
+    "uuid": "^11.1.0",
     "webfontloader": "^1.6.28",
     "xlsx": "^0.18.5"
   },
