--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@uiw/color-convert": "^2.6.0",
     "color-convert": "^3.1.0",
+    "pdf-lib": "^1.17.1",
     "react": "^19.1.0",
     "react-color": "^2.19.3",
     "react-colorful": "^5.6.1",
